--- a/client/.gitignore
+++ b/client/.gitignore
@@ -2,16 +2,10 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# production
-/build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
@@ -19,5 +13,4 @@
 .env.production.local
 
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
